update code sha256

--- a/AWSSYSTEM/config_dev_tckttv.ini
+++ b/AWSSYSTEM/config_dev_tckttv.ini
@@ -1,9 +1,9 @@
 [Emqtt]
-AWSNAME: tckttv_data_dev
-ADDRESSS: dev.aws.weathervietnam.vn
+AWSNAME: tckttv_data_station
+ADDRESSS: tckttv.weathervietnam.vn
 PORT:  14688
 SENDTOPIC:  aws/taynguyen/control1
-GETTOPIC: aws/taynguyen/data
+GETTOPIC: aws/tckttv/station
 USERNAME: admin
 PASSWORD: cnTT@0258
 [Paths]
@@ -14,10 +14,10 @@ TIMMING_FOLDER: E:\timming
 DATA_ERROR_FOLDER: E:\data_error
 LOG_FOLDER: E:\log
 [Database]
-DATABASE_IP: dev.aws.weathervietnam.vn:14680
-DATABASE_NAME: aws-tckttv-raw
-DATABASE_NAME_VIEW: aws-tckttv-raw
+DATABASE_IP: mongodb://mqttmongo4.weathervietnam.vn:61004,mqttmongo5.weathervietnam.vn:61005,mqttmongo6.weathervietnam.vn:61006,mqttmongo7.weathervietnam.vn:61007
+DATABASE_NAME: mqtt
+DATABASE_NAME_VIEW: mqtt
 DATABASE_USER: admin
 DATABASE_PASS: cnTT@0258
-DATABASE_REPLICASET: replicaTCkttv
+DATABASE_REPLICASET: replicaMqtt
 
