--- a/AWSSYSTEM/config_dev_tckttv.ini
+++ b/AWSSYSTEM/config_dev_tckttv.ini
@@ -3,7 +3,7 @@ AWSNAME: tckttv_data_station
 ADDRESSS: tckttv.weathervietnam.vn
 PORT:  14688
 SENDTOPIC:  aws/taynguyen/control1
-GETTOPIC: aws/tckttv/station
+GETTOPIC: aws/tckttv/+/station
 USERNAME: admin
 PASSWORD: cnTT@0258
 [Paths]
