--- a/AWSSYSTEM/config_tckttv_station_kttv2.ini
+++ b/AWSSYSTEM/config_tckttv_station_kttv2.ini
@@ -1,5 +1,5 @@
 [Emqtt]
-AWSNAME: tckttv_aws_rawdata_8
+AWSNAME: tckttv_aws_station_2
 ADDRESSS: my_emqx_emqx8
 PORT:  1883
 SENDTOPIC:  aws/tckttv/control
