--- a/AWSSYSTEM/config_tckttv_station_kttv1.ini
+++ b/AWSSYSTEM/config_tckttv_station_kttv1.ini
@@ -1,5 +1,5 @@
 [Emqtt]
-AWSNAME: tckttv_aws_rawdata_7
+AWSNAME: tckttv_aws_station_1
 ADDRESSS: my_emqx_emqx7
 PORT:  1883
 SENDTOPIC:  aws/tckttv/control
