--- a/AWSSYSTEM/config_tckttv_station_kttv1.ini
+++ b/AWSSYSTEM/config_tckttv_station_kttv1.ini
@@ -3,7 +3,7 @@ AWSNAME: tckttv_aws_station_1
 ADDRESSS: my_emqx_emqx7
 PORT:  1883
 SENDTOPIC:  aws/tckttv/control
-GETTOPIC: $share/grouprawdata/aws/tckttv/+/station
+GETTOPIC: $share/groupstation/aws/tckttv/+/station
 USERNAME: admin
 PASSWORD: cnTT@0258
 [Paths]
@@ -15,8 +15,8 @@ DATA_ERROR_FOLDER: /home/data_error
 LOG_FOLDER: /home/log
 [Database]
 DATABASE_IP: mongodb://tckttvmongo4.weathervietnam.vn:62004,tckttvmongo5.weathervietnam.vn:62005,tckttvmongo6.weathervietnam.vn:62006,tckttvmongo7.weathervietnam.vn:62007
-DATABASE_NAME: aws-tckttv-raw
-DATABASE_NAME_VIEW: aws-tckttv-raw
+DATABASE_NAME: mqtt
+DATABASE_NAME_VIEW: mqtt
 DATABASE_USER: admin
 DATABASE_PASS: cnTT@0258
 DATABASE_REPLICASET: replicaTCkttv
