--- a/AWSSYSTEM/config_tckttv_station_kttv1.ini
+++ b/AWSSYSTEM/config_tckttv_station_kttv1.ini
@@ -14,9 +14,9 @@ TIMMING_FOLDER: /home/timming
 DATA_ERROR_FOLDER: /home/data_error
 LOG_FOLDER: /home/log
 [Database]
-DATABASE_IP: mongodb://tckttvmongo4.weathervietnam.vn:62004,tckttvmongo5.weathervietnam.vn:62005,tckttvmongo6.weathervietnam.vn:62006,tckttvmongo7.weathervietnam.vn:62007
+DATABASE_IP: mongodb://mqttmongo4.weathervietnam.vn:61004,mqttmongo5.weathervietnam.vn:61005,mqttmongo6.weathervietnam.vn:61006,mqttmongo7.weathervietnam.vn:61007
 DATABASE_NAME: mqtt
 DATABASE_NAME_VIEW: mqtt
 DATABASE_USER: admin
 DATABASE_PASS: cnTT@0258
-DATABASE_REPLICASET: replicaTCkttv
+DATABASE_REPLICASET: replicaMqtt
