--- a/AWSSYSTEM/config_tckttv_station_kttv2.ini
+++ b/AWSSYSTEM/config_tckttv_station_kttv2.ini
@@ -3,7 +3,7 @@ AWSNAME: tckttv_aws_station_2
 ADDRESSS: my_emqx_emqx8
 PORT:  1883
 SENDTOPIC:  aws/tckttv/control
-GETTOPIC: aws/tckttv/+/station
+GETTOPIC:   $share/groupstation/aws/tckttv/+/station
 USERNAME: admin
 PASSWORD: cnTT@0258
 [Paths]
