--- a/AWSSYSTEM/config_tckttv_station_kttv1.ini
+++ b/AWSSYSTEM/config_tckttv_station_kttv1.ini
@@ -3,7 +3,7 @@ AWSNAME: tckttv_aws_station_1
 ADDRESSS: my_emqx_emqx7
 PORT:  1883
 SENDTOPIC:  aws/tckttv/control
-GETTOPIC:   aws/tckttv/+/station
+GETTOPIC:   $share/groupstation/aws/tckttv/+/station
 USERNAME: admin
 PASSWORD: cnTT@0258
 [Paths]
