fix new station

--- a/AWSSYSTEM/config_dev_tckttv.ini
+++ b/AWSSYSTEM/config_dev_tckttv.ini
@@ -1,16 +1,16 @@
 [Emqtt]
 AWSNAME: tckttv_data_station
-ADDRESSS: tckttv.weathervietnam.vn
+ADDRESSS: 10.151.2.7
 PORT:  14688
 SENDTOPIC:  aws/taynguyen/control1
 GETTOPIC: aws/tckttv/+/station
 USERNAME: admin
 PASSWORD: cnTT@0258
 [Emqtt_Backup]
-AWSNAME: tckttv_group_station_backup_1
+AWSNAME: tckttv_mqtt_station_backup_test
 ADDRESSS: 14.225.23.185
 PORT:  14688
-STATIONTOPIC: $share/groupstationbackupfromkttv/aws/tckttv/+/station
+STATIONTOPIC: $share/testmqttstationbackupfromkttv/aws/tckttv/+/station
 USERNAME: admin
 PASSWORD: cnTT@0258
 [Paths]
